@@ -70,6 +70,7 @@ typedef enum
 
 gboolean egg_accelerator_parse_virtual        (const gchar            *accelerator,
                                                guint                  *accelerator_key,
+					       guint                  *keycode,
                                                EggVirtualModifierType *accelerator_mods);
 void     egg_keymap_resolve_virtual_modifiers (GdkKeymap              *keymap,
                                                EggVirtualModifierType  virtual_mods,
@@ -79,6 +80,7 @@ void     egg_keymap_virtualize_modifiers      (GdkKeymap              *keymap,
                                                EggVirtualModifierType *virtual_mods);
 
 gchar* egg_virtual_accelerator_name (guint                  accelerator_key,
+				     guint		    keycode,
                                      EggVirtualModifierType accelerator_mods);
 
 G_END_DECLS
