@@ -1,3 +1,12 @@
+Tue Nov 18 12:23:26 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* eggcellrendererkeys.[ch]: Patch from Bastien Nocera to to handle
+	keycodes as well as keysyms.
+
+	* eggaccelerators.[ch]: handle keycodes.
+
+	* gnome-keybinding-properties.c: handle keycodes.
+
 2003-10-28  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.5.0
